Updates and Fixes *Remove minsdk and targetsdk from AndroidManifest
Signed-off-by: Abhi Jain <devabhixda@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+        google()
+    }
+}
 apply plugin: 'com.android.library'
 
 android {
@@ -6,4 +13,9 @@ android {
         java.srcDirs = ['src']
         res.srcDirs = ['res']
     }
+}
+repositories {
+    mavenCentral()
+    jcenter()
+    google()
 }
